--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "swiper": "^8.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
